IataMessageProcessor/Parsers/Antlr/Fbr2/fbr2Parser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.10.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from fbr2.g4 by ANTLR 4.10.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.10.1")]
[System.CLSCompliant(false)]
public partial class fbr2Parser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		SeparatorSlant=1, SeparatorHyphen=2, A=3, N=4, G=5, SeparatorCrlf=6;
	public const int
		RULE_fbr2 = 0, RULE_standardMessageIdentification = 1, RULE_flightInformation = 2, 
		RULE_requestReference = 3, RULE_flightIdentification = 4, RULE_requestingOfficeMessageAddress = 5, 
		RULE_rofr = 6, RULE_requestingOfficeFileReference = 7, RULE_requestingParticipantIdentification = 8, 
		RULE_standardMessageIdentifier = 9, RULE_messageTypeVersionNumber = 10, 
		RULE_lineIdentifier = 11, RULE_carrierCode = 12, RULE_flightNumber = 13, 
		RULE_dayOfScheduledDeparture = 14, RULE_monthOfScheduledDeparture = 15, 
		RULE_airportCodeOfLoading = 16, RULE_airportCodeOfUnloading = 17, RULE_airportCityCode = 18, 
		RULE_officeFunctionDesignator = 19, RULE_companyDesignator = 20, RULE_fileReference = 21, 
		RULE_participantIdentifier = 22, RULE_participantCode = 23;
	public static readonly string[] ruleNames = {
		"fbr2", "standardMessageIdentification", "flightInformation", "requestReference", 
		"flightIdentification", "requestingOfficeMessageAddress", "rofr", "requestingOfficeFileReference", 
		"requestingParticipantIdentification", "standardMessageIdentifier", "messageTypeVersionNumber", 
		"lineIdentifier", "carrierCode", "flightNumber", "dayOfScheduledDeparture", 
		"monthOfScheduledDeparture", "airportCodeOfLoading", "airportCodeOfUnloading", 
		"airportCityCode", "officeFunctionDesignator", "companyDesignator", "fileReference", 
		"participantIdentifier", "participantCode"
	};

	private static readonly string[] _LiteralNames = {
	};
	private static readonly string[] _SymbolicNames = {
		null, "SeparatorSlant", "SeparatorHyphen", "A", "N", "G", "SeparatorCrlf"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "fbr2.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static fbr2Parser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public fbr2Parser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public fbr2Parser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class Fbr2Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StandardMessageIdentificationContext standardMessageIdentification() {
			return GetRuleContext<StandardMessageIdentificationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FlightInformationContext flightInformation() {
			return GetRuleContext<FlightInformationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public RequestReferenceContext requestReference() {
			return GetRuleContext<RequestReferenceContext>(0);
		}
		public Fbr2Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fbr2; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ifbr2Visitor<TResult> typedVisitor = visitor as Ifbr2Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFbr2(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Fbr2Context fbr2() {
		Fbr2Context _localctx = new Fbr2Context(Context, State);
		EnterRule(_localctx, 0, RULE_fbr2);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 48;
			standardMessageIdentification();
			State = 49;
			flightInformation();
			State = 50;
			requestReference();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StandardMessageIdentificationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StandardMessageIdentifierContext standardMessageIdentifier() {
			return GetRuleContext<StandardMessageIdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SeparatorSlant() { return GetToken(fbr2Parser.SeparatorSlant, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public MessageTypeVersionNumberContext messageTypeVersionNumber() {
			return GetRuleContext<MessageTypeVersionNumberContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SeparatorCrlf() { return GetToken(fbr2Parser.SeparatorCrlf, 0); }
		public StandardMessageIdentificationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_standardMessageIdentification; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ifbr2Visitor<TResult> typedVisitor = visitor as Ifbr2Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStandardMessageIdentification(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StandardMessageIdentificationContext standardMessageIdentification() {
		StandardMessageIdentificationContext _localctx = new StandardMessageIdentificationContext(Context, State);
		EnterRule(_localctx, 2, RULE_standardMessageIdentification);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 52;
			standardMessageIdentifier();
			State = 53;
			Match(SeparatorSlant);
			State = 54;
			messageTypeVersionNumber();
			State = 55;
			Match(SeparatorCrlf);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FlightInformationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public LineIdentifierContext lineIdentifier() {
			return GetRuleContext<LineIdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SeparatorSlant() { return GetToken(fbr2Parser.SeparatorSlant, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public FlightIdentificationContext flightIdentification() {
			return GetRuleContext<FlightIdentificationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SeparatorCrlf() { return GetToken(fbr2Parser.SeparatorCrlf, 0); }
		public FlightInformationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_flightInformation; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ifbr2Visitor<TResult> typedVisitor = visitor as Ifbr2Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFlightInformation(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FlightInformationContext flightInformation() {
		FlightInformationContext _localctx = new FlightInformationContext(Context, State);
		EnterRule(_localctx, 4, RULE_flightInformation);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 57;
			lineIdentifier();
			State = 58;
			Match(SeparatorSlant);
			State = 59;
			flightIdentification();
			State = 60;
			Match(SeparatorCrlf);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RequestReferenceContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public LineIdentifierContext lineIdentifier() {
			return GetRuleContext<LineIdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SeparatorSlant() { return GetToken(fbr2Parser.SeparatorSlant, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SeparatorCrlf() { return GetToken(fbr2Parser.SeparatorCrlf, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public RequestingOfficeMessageAddressContext requestingOfficeMessageAddress() {
			return GetRuleContext<RequestingOfficeMessageAddressContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public RofrContext rofr() {
			return GetRuleContext<RofrContext>(0);
		}
		public RequestReferenceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_requestReference; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ifbr2Visitor<TResult> typedVisitor = visitor as Ifbr2Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRequestReference(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RequestReferenceContext requestReference() {
		RequestReferenceContext _localctx = new RequestReferenceContext(Context, State);
		EnterRule(_localctx, 6, RULE_requestReference);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 62;
			lineIdentifier();
			State = 63;
			Match(SeparatorSlant);
			State = 65;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==A) {
				{
				State = 64;
				requestingOfficeMessageAddress();
				}
			}

			State = 68;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==SeparatorSlant) {
				{
				State = 67;
				rofr();
				}
			}

			State = 70;
			Match(SeparatorCrlf);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FlightIdentificationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public CarrierCodeContext carrierCode() {
			return GetRuleContext<CarrierCodeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FlightNumberContext flightNumber() {
			return GetRuleContext<FlightNumberContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] SeparatorSlant() { return GetTokens(fbr2Parser.SeparatorSlant); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SeparatorSlant(int i) {
			return GetToken(fbr2Parser.SeparatorSlant, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DayOfScheduledDepartureContext dayOfScheduledDeparture() {
			return GetRuleContext<DayOfScheduledDepartureContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MonthOfScheduledDepartureContext monthOfScheduledDeparture() {
			return GetRuleContext<MonthOfScheduledDepartureContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AirportCodeOfLoadingContext airportCodeOfLoading() {
			return GetRuleContext<AirportCodeOfLoadingContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AirportCodeOfUnloadingContext airportCodeOfUnloading() {
			return GetRuleContext<AirportCodeOfUnloadingContext>(0);
		}
		public FlightIdentificationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_flightIdentification; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ifbr2Visitor<TResult> typedVisitor = visitor as Ifbr2Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFlightIdentification(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FlightIdentificationContext flightIdentification() {
		FlightIdentificationContext _localctx = new FlightIdentificationContext(Context, State);
		EnterRule(_localctx, 8, RULE_flightIdentification);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 72;
			carrierCode();
			State = 73;
			flightNumber();
			State = 74;
			Match(SeparatorSlant);
			State = 75;
			dayOfScheduledDeparture();
			State = 76;
			monthOfScheduledDeparture();
			State = 77;
			Match(SeparatorSlant);
			State = 78;
			airportCodeOfLoading();
			State = 80;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==A) {
				{
				State = 79;
				airportCodeOfUnloading();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RequestingOfficeMessageAddressContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public AirportCityCodeContext airportCityCode() {
			return GetRuleContext<AirportCityCodeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public OfficeFunctionDesignatorContext officeFunctionDesignator() {
			return GetRuleContext<OfficeFunctionDesignatorContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CompanyDesignatorContext companyDesignator() {
			return GetRuleContext<CompanyDesignatorContext>(0);
		}
		public RequestingOfficeMessageAddressContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_requestingOfficeMessageAddress; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ifbr2Visitor<TResult> typedVisitor = visitor as Ifbr2Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRequestingOfficeMessageAddress(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RequestingOfficeMessageAddressContext requestingOfficeMessageAddress() {
		RequestingOfficeMessageAddressContext _localctx = new RequestingOfficeMessageAddressContext(Context, State);
		EnterRule(_localctx, 10, RULE_requestingOfficeMessageAddress);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 82;
			airportCityCode();
			State = 83;
			officeFunctionDesignator();
			State = 84;
			companyDesignator();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RofrContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SeparatorSlant() { return GetToken(fbr2Parser.SeparatorSlant, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public RequestingOfficeFileReferenceContext requestingOfficeFileReference() {
			return GetRuleContext<RequestingOfficeFileReferenceContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public RequestingParticipantIdentificationContext requestingParticipantIdentification() {
			return GetRuleContext<RequestingParticipantIdentificationContext>(0);
		}
		public RofrContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_rofr; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ifbr2Visitor<TResult> typedVisitor = visitor as Ifbr2Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRofr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RofrContext rofr() {
		RofrContext _localctx = new RofrContext(Context, State);
		EnterRule(_localctx, 12, RULE_rofr);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 86;
			Match(SeparatorSlant);
			State = 88;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SeparatorHyphen) | (1L << A) | (1L << N) | (1L << G))) != 0)) {
				{
				State = 87;
				requestingOfficeFileReference();
				}
			}

			State = 91;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==SeparatorSlant) {
				{
				State = 90;
				requestingParticipantIdentification();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RequestingOfficeFileReferenceContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public FileReferenceContext fileReference() {
			return GetRuleContext<FileReferenceContext>(0);
		}
		public RequestingOfficeFileReferenceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_requestingOfficeFileReference; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ifbr2Visitor<TResult> typedVisitor = visitor as Ifbr2Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRequestingOfficeFileReference(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RequestingOfficeFileReferenceContext requestingOfficeFileReference() {
		RequestingOfficeFileReferenceContext _localctx = new RequestingOfficeFileReferenceContext(Context, State);
		EnterRule(_localctx, 14, RULE_requestingOfficeFileReference);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 93;
			fileReference();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RequestingParticipantIdentificationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] SeparatorSlant() { return GetTokens(fbr2Parser.SeparatorSlant); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SeparatorSlant(int i) {
			return GetToken(fbr2Parser.SeparatorSlant, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ParticipantIdentifierContext participantIdentifier() {
			return GetRuleContext<ParticipantIdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ParticipantCodeContext participantCode() {
			return GetRuleContext<ParticipantCodeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AirportCityCodeContext airportCityCode() {
			return GetRuleContext<AirportCityCodeContext>(0);
		}
		public RequestingParticipantIdentificationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_requestingParticipantIdentification; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ifbr2Visitor<TResult> typedVisitor = visitor as Ifbr2Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRequestingParticipantIdentification(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RequestingParticipantIdentificationContext requestingParticipantIdentification() {
		RequestingParticipantIdentificationContext _localctx = new RequestingParticipantIdentificationContext(Context, State);
		EnterRule(_localctx, 16, RULE_requestingParticipantIdentification);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 95;
			Match(SeparatorSlant);
			State = 96;
			participantIdentifier();
			State = 97;
			Match(SeparatorSlant);
			State = 98;
			participantCode();
			State = 99;
			Match(SeparatorSlant);
			State = 100;
			airportCityCode();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StandardMessageIdentifierContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] A() { return GetTokens(fbr2Parser.A); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode A(int i) {
			return GetToken(fbr2Parser.A, i);
		}
		public StandardMessageIdentifierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_standardMessageIdentifier; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ifbr2Visitor<TResult> typedVisitor = visitor as Ifbr2Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStandardMessageIdentifier(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StandardMessageIdentifierContext standardMessageIdentifier() {
		StandardMessageIdentifierContext _localctx = new StandardMessageIdentifierContext(Context, State);
		EnterRule(_localctx, 18, RULE_standardMessageIdentifier);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 102;
			Match(A);
			State = 103;
			Match(A);
			State = 104;
			Match(A);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MessageTypeVersionNumberContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] N() { return GetTokens(fbr2Parser.N); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode N(int i) {
			return GetToken(fbr2Parser.N, i);
		}
		public MessageTypeVersionNumberContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_messageTypeVersionNumber; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ifbr2Visitor<TResult> typedVisitor = visitor as Ifbr2Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMessageTypeVersionNumber(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MessageTypeVersionNumberContext messageTypeVersionNumber() {
		MessageTypeVersionNumberContext _localctx = new MessageTypeVersionNumberContext(Context, State);
		EnterRule(_localctx, 20, RULE_messageTypeVersionNumber);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 106;
			Match(N);
			State = 108;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
			case 1:
				{
				State = 107;
				Match(N);
				}
				break;
			}
			State = 111;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==N) {
				{
				State = 110;
				Match(N);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LineIdentifierContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] A() { return GetTokens(fbr2Parser.A); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode A(int i) {
			return GetToken(fbr2Parser.A, i);
		}
		public LineIdentifierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_lineIdentifier; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ifbr2Visitor<TResult> typedVisitor = visitor as Ifbr2Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLineIdentifier(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LineIdentifierContext lineIdentifier() {
		LineIdentifierContext _localctx = new LineIdentifierContext(Context, State);
		EnterRule(_localctx, 22, RULE_lineIdentifier);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 113;
			Match(A);
			State = 114;
			Match(A);
			State = 115;
			Match(A);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
